# MuDiSP4

./: README
mudisp-4/: CHANGE  CMakeCache.txt  CMakeLists.txt  CONTACT  INSTALL  MuDISP.project  MuDiSP.workspace  MuDiSP.workspace.massimo  MuDiSP.workspace.session  README  build.sh  build_all.sh  debug.sh  mudisp.pc.in
mudisp-4-examples/gmc-cdma/: .cproject  .project  GMCCDMA_signatures_u002_j016_n032.txt  Makefile  Makefile-gmccdma  Makefile-gmccdma-ai  PROJECT_MAP  README  atq-clear  launcher  lp-sevaggia.sh  param.txt  param.txt.ai  param.txt.best  param.txt.fixed  param.txt.test  run-crai  source.me  source.me.noinput  vit.ps
mudisp-4-examples/gmc-cdma/CVS/: Entries  Repository
mudisp-4-examples/gmc-cdma/analyzer/: gmccdma1.gnu  gmccdma2.gnu  gmccdma2.gnu~  gmccdma3.gnu  gmccdma4.gnu  gmccdma_coding.gnu
mudisp-4-examples/gmc-cdma/analyzer/CVS/: Entries  Repository
mudisp-4-examples/gmc-cdma/analyzer/gmccdma/: gmccdma1.gnu
mudisp-4-examples/gmc-cdma/analyzer/gmccdma-ai/: crai.gnu
mudisp-4-examples/gmc-cdma/doc/: carrieralloc.aux  carrieralloc.blg  carrieralloc.tex
mudisp-4-examples/gmc-cdma/doc/IEEE/: README.txt  bare_conf.aux  bare_conf.blg  bare_conf.tex  bare_jrnl.tex
mudisp-4-examples/gmc-cdma/doc/figs/: system.vsd
mudisp-4-examples/gmc-cdma/params/: ebno.txt  ebno_coding.txt  gmccdma_coding_000.txt  gmccdma_coding_001.txt  gmccdma_coding_003.txt  gmccdma_coding_004.txt  gmccdma_coding_005.txt  gmccdma_coding_006.txt  gmccdma_coding_010.txt  gmccdma_dca.txt  gmccdma_fca.txt  gmccdma_swp.txt
mudisp-4-examples/gmc-cdma/params/CVS/: Entries  Repository  Root
mudisp-4-examples/gmc-cdma/params/gmccdma/: gmccdma_coding.txt  gmccdma_coding_002.txt  gmccdma_coding_007.txt  gmccdma_coding_008.txt  gmccdma_coding_009.txt  gmccdma_ovl.txt
mudisp-4-examples/gmc-cdma/params/gmccdma-ai/: base_param.txt  crai-base-best.txt  crai-base-best_000.txt  crai-base-best_001.txt  crai-base-best_002.txt  crai-base-best_003.txt  crai-base-best_004.txt  crai-base-best_005.txt  crai-base-best_006.txt  crai-base-best_007.txt  crai-base-best_008.txt  crai-base-best_009.txt  crai-base-best_010.txt  crai-base-best_011.txt  crai-base-best_012.txt  crai-base-fixed.txt  crai-base-fixed_000.txt  crai-base-fixed_001.txt  crai-base-fixed_002.txt  crai-base-fixed_003.txt  crai-base-fixed_004.txt  crai-base-fixed_005.txt  crai-base-fixed_006.txt  crai-base-fixed_007.txt  crai-base-fixed_008.txt  crai-base-fixed_009.txt  crai-base-fixed_010.txt  crai-base-fixed_011.txt  crai-base-fixed_012.txt  crai-base-soar.txt  crai-base-soar_000.txt  crai-base-soar_001.txt  crai-base-soar_002.txt  crai-base-soar_003.txt  crai-base-soar_004.txt  crai-base-soar_005.txt  crai-base-soar_006.txt  crai-base-soar_007.txt  crai-base-soar_008.txt  crai-base-soar_009.txt  (+5 more)
mudisp-4-examples/gmc-cdma/results/: gmccdma_8u_32c_v14.eps  gmccdma_8u_32c_v34.eps  gmccdma_8u_64c_v28.eps
mudisp-4-examples/gmc-cdma/results/CVS/: Entries  Repository
mudisp-4-examples/gmc-cdma/results/gmccdma/: gmccdma_8u_32c.eps
mudisp-4-examples/gmc-cdma/sequences/CVS/: Entries  Repository
mudisp-4-examples/gmc-cdma/soar-agents/: ai-gmc-cdma.soar  ai-gmc-cdma.txt  ai-gmc-cdma.vsa  crai-rev2.soar  crai-rev2.vsa  crai-rev3.soar  crai-rev3.vsa  crai-rev4.soar  crai-rev4.vsa  crai-rev5.soar  crai-rev5.vsa  crai.soar  crai.vsa
mudisp-4-examples/gmc-cdma/src/: #allocator.h#  aiallocator.cpp  aiallocator.h  allocator.cpp  allocator.h  awgn.cpp  awgn.h  bitber.cpp  bitber.h  bitsrc.cpp  bitsrc.h  blockawgn.cpp  blockawgn.cpp~  blockawgn.h  blockrec.cpp  blockrec.h  blocksrc.cpp  blocksrc.cpp~  blocksrc.h  blocksrc.h~  blockuser.cpp  blockuser.h  clapack.h  convcoder.cpp  convcoder.h  convdecoder.cpp  convdecoder.h  corrblind.cpp  corrblind.h  correlator.cpp  correlator.h  corrlmmse.cpp  corrlmmse.h  corrlmmsetr.cpp  corrlmmsetr.h  corrmulti.cpp  corrmulti.h  cpmpchan.cpp  cpmpchan.h  cpmpcoeffs.cpp  (+40 more)
mudisp-4-examples/gmc-cdma/src_blind/: system.cpp  system.h
mudisp-4-examples/gmc-cdma/src_coding/: ConvEncode.c  DVBS2lookup.h  Depuncture.c  DuobinaryCRSCDecode.c  DuobinaryCRSCEncode.c  Puncture.c  Somap.c  ViterbiDecode.c  convencode.cpp  convencode.cpp~  convencode.h  convencode.h~  convolutional.cpp  convolutional.h  interleaver.h  pskmapper.cpp  pskmapper.h  softdemapper.cpp  softdemapper.h  viterbidecoder.cpp  viterbidecoder.h
mudisp-4-examples/gmc-cdma/src_gmccdma/: system.cpp  system.h~
mudisp-4-examples/gmc-cdma/src_gmccdma_ai/: system.cpp  system.cpp~  system.h
mudisp-4-examples/gmc-cdma/src_testcoding/: system.cpp  system.cpp~  system.h  system.h~
mudisp-4-examples/gmc-cdma/tools/: changer  param_exploder  param_exploder_multi
mudisp-4/cmake/: CMakeCache.txt
mudisp-4/cmake/Modules/: FindDocutils.cmake  FindUHD.cmake  Findclapack.cmake  MUDISPComponent.cmake  MUDISPPackage.cmake  MUDISPPython.cmake  MUDISPVersion.cmake
mudisp-4/docs/: CMakeLists.txt  DoxyRule  Doxyfile.in  Mainpage.dox  QUICKSTART
mudisp-4/docs/image_dir/: logo.eps  user_guide_fig1.eps  user_guide_fig2.eps
mudisp-4/include/: CMakeLists.txt  config.h
mudisp-4/include/CommonLib/: BitVector.h  CMakeLists.txt  Interthread.h  Logger.h  Threads.h  rndgen.h
mudisp-4/include/mudisp/: CMakeLists.txt
mudisp-4/include/mudisp/engine/: CMakeLists.txt  block.h  errors.h  lcm.h  main.h  mudisp.h  param.h  parlist.h  port.h
mudisp-4/include/tnt/: CMakeLists.txt  cholesky.h  cmat.h  fcscmat.h  fmat.h  fortran.h  fspvec.h  index.h  lapack.h  lu.h  out  qr.h  region1d.h  region2d.h  stpwatch.h  subscrpt.h  tnt.h  tntcmplx.h  tntmath.h  transv.h  triang.h  trislv.h  vec.h  vecadaptor.h  version.h
mudisp-4/install/: Makefile.lib  Makefile.sim
mudisp-4/lib/: CMakeLists.txt
mudisp-4/lib/CommonLib/: BitVector.cpp  CMakeLists.txt  Configuration.cpp  LinkedLists.cpp  Logger.cpp  Sockets.cpp  Threads.cpp  Timeval.cpp
mudisp-4/lib/mudisp/: CMakeLists.txt
mudisp-4/lib/mudisp/engine/: CMakeLists.txt  block.cpp  block.cpp~  lcm.cpp  param.cpp  parlist.cpp  port.cpp  stdfun.cpp
mudisp-4/tools/: CMakeLists.txt  param_exploder.cpp  param_exploder_multi.cpp
(+81 files in other folders)
